# Red_Sequence_Evolution

./: .rtd-environment.yml  Makefile  README.rst  environment.yml  setup.cfg  setup.py
docs/: Makefile  commands.rst  index.rst  make.bat  project_organization.rst
docs/getting_started/: ENVIRONMENT.rst  INSTALL.rst  getting_started.rst
references/: README.rst  The Red Sequence Method for Galaxy Cluster Detection _ astrobites.htm
src/data_analysis/: analysis_main.py
src/data_preprocessing/: download_dataset.py  redseq_old.py
src/redseq_tools/: __init__.py  redseq_tools.py
